  should now provide :samp:`_load_backend_{name}` classmethod for each backend.
  This is simpler, more flexible, and more explicit than the
  previous (1.6 and earlier) API, which required a :samp:`_has_backend_{name}`
  class property and a :samp:`_calc_checksum_{name}` method. Support
  for the older API is deprecated, and will it be removed in Passlib 2.0.

Todo
----

* Thread safety audit and tests for CryptContext, HasManyBackends, and lazy-init subclasses.

**1.6.2** (2013-12-26)
======================

    Minor changes & compatibility fixes

    * Re-tuned the :attr:`~passlib.ifc.PasswordHash.default_rounds` values for all of the hashes.

    * Added the new :doc:`bcrypt_sha256 <lib/passlib.hash.bcrypt_sha256>` hash,
      which wraps BCrypt using SHA256 in order to work around BCrypt's password size limitations
      (:issue:`43`).

    * :doc:`passlib.hash.bcrypt <lib/passlib.hash.bcrypt>`:
      Added support for the `bcrypt <https://pypi.python.org/pypi/bcrypt>`_
      library as one of the possible bcrypt backends that will be used if available.
      (:issue:`49`)

    * :mod:`passlib.ext.django`: Passlib's Django extension
      (and it's related hashes and unittests) have been updated to handle
      some minor API changes in Django 1.5-1.6. They should now be compatible with Django 1.2 and up.
      (:issue:`50`)

**1.6.1** (2012-08-02)
======================

    Minor bugfix release

    * *bugfix*: Various :class:`~passlib.context.CryptContext` methods
      would incorrectly raise :exc:`TypeError` if passed a :class:`!unicode`
      user category under Python 2. For consistency,
      :class:`!unicode` user category values are now encoded to ``utf-8`` :class:`bytes` under Python 2.

    * *bugfix*: Reworked internals of the :class:`CryptContext` config compiler
      to fix a couple of border cases (:issue:`39`):

        - It will now throw a :exc:`ValueError`
          if the :ref:`default <context-default-option>` scheme is marked as