@@ -503,16 +503,8 @@ admin__context__deprecated = des_crypt, bsdi_crypt
         self.assertEqual(pa.get_min_verify_time('admin'), 0)
 
         pb = pa.replace(min_verify_time=.1)
-        self.assertEqual(pb.get_min_verify_time(), .1)
-        self.assertEqual(pb.get_min_verify_time('admin'), .1)
-
-        pc = pa.replace(admin__context__min_verify_time=.2)
-        self.assertEqual(pc.get_min_verify_time(), 0)
-        self.assertEqual(pc.get_min_verify_time('admin'), .2)
-
-        pd = pb.replace(admin__context__min_verify_time=.2)
-        self.assertEqual(pd.get_min_verify_time(), .1)
-        self.assertEqual(pd.get_min_verify_time('admin'), .2)
+        self.assertEqual(pb.get_min_verify_time(), 0)
+        self.assertEqual(pb.get_min_verify_time('admin'), 0)
 
     #===================================================================
     # serialization
